--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <style name="Theme.OrlaJournal" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@android:color/holo_blue_light</item>
-        <item name="colorSecondary">@android:color/holo_purple</item>
-    </style>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <!-- Base application theme. -->
+    <style name="Base.Theme.Orlajournal" parent="Theme.Material3.DayNight"/>
+    <style name="Theme.Orlajournal" parent="Base.Theme.Orlajournal"/>
 </resources>
